2004-02-20  Mark Kettenis  <kettenis@gnu.org>

	* NEWS (New native configurations): Mention OpenBSD/alpha.
	* configure.tgt: Add alpha*-*-openbsd*.
	* configure.host: Add alpha*-*-openbsd*.
	* alphanbsd-tdep.c: Update copyright year.
	(_initialize_alphanbsd_tdep): Register OS ABI for OpenBSD ELF.

2004-02-20  Andrew Cagney  <cagney@redhat.com>

	Fix PR tdep/1372.
	* configure.tgt: Delete target "none-*-*".
	* configure.host: Delete host "none-*-*".
	* config/none/none.mh: Delete file.
	* config/none/none.mt: Delete file.
	* config/none/xm-none.h: Delete file.
	* config/none/tm-none.h: Delete file.
	* config/none/nm-none.h: Delete file.

2004-02-19  Fred Fish  <fnf@redhat.com>

	* sh-tdep.c (sh_analyze_prologue): Eliminate useless test of
	cache->uses_fp prior to setting it.

2004-02-19  Fred Fish  <fnf@redhat.com>

	Fix for PR breakpoint/1558.
	* sh-tdep.c (IS_JSR): New macro.
	(sh_analyze_prologue): Use IS_JSR to terminate prologue scan.

2004-02-19  Jim Blandy  <jimb@redhat.com>

	* findvar.c (value_from_register): Doc fix.

2004-02-19  Jeff Johnston  <jjohnstn@redhat.com>

	* printcmd.c (print_scalar_formatted): Do not check for sizeof
	type being greater than sizeof of host's LONGEST.  Always use
	unpack_long() unless format 'f' chosen.

2004-02-19  Joel Brobecker  <brobecker@gnat.com>

	Committed by Elena Zannoni  <ezannoni@redhat.com>

	* symtab.c (find_pc_sect_psymtab): Return the psymtab that
	contains a symbol wich is the best, non-exact match for the given
	pc.  Update comments.

2004-02-19  Elena Zannoni  <ezannoni@redhat.com>
	
	* event-top.c (async_request_quit): Remove uses of REQUEST_QUIT
	macro, which was part of the now removed Mach 3 port.
	* utils.c (request_quit): Ditto.

2004-02-18  Mark Kettenis  <kettenis@gnu.org>

	* config/djgpp/fnchange.lst: Rename "amd64obsd-tdep.c" and
        "amd64obsd-nat.c" to "a64ob-tdep.c" and "a64ob-nat.c".

2004-02-18  Ulrich Weigand <Ulrich.Weigand@de.ibm.com>

	Committed by Mark Kettenis  <kettenis@gnu.org>.
