@@ -1,2 +1,3 @@
 # Target: OpenBSD/amd64
-TDEPFILES= x86-64-tdep.o amd64obsd-tdep.o i386-tdep.o i387-tdep.o
+TDEPFILES= x86-64-tdep.o amd64obsd-tdep.o \
+	i386-tdep.o i387-tdep.o i386bsd-tdep.o
